force-app/main/default/objects/Event__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Date and time of end of the event.</description>
    <inlineHelpText>Date and time of end</inlineHelpText>
    <label>End Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>