force-app/main/default/objects/Event__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Unique event number.</description>
    <inlineHelpText>Event number</inlineHelpText>
    <label>Event #</label>
    <type>AutoNumber</type>
</CustomField>