force-app/main/default/objects/Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the event live?</description>
    <inlineHelpText>Whether live</inlineHelpText>
    <label>Live?</label>
    <type>Checkbox</type>
</CustomField>