force-app/main/default/objects/Event__c/fields/Max_seats__c.field-meta.xml
<CustomField>
    <fullName>Max_seats__c</fullName>
    <description>Number of the maximum seats number on the event.</description>
    <inlineHelpText>Maximum seats number</inlineHelpText>
    <label>Max seats</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>