force-app/main/default/objects/Event__c/fields/People_Attending__c.field-meta.xml
<CustomField>
    <fullName>People_Attending__c</fullName>
    <description>Number of people attending the event.</description>
    <inlineHelpText>People attending event</inlineHelpText>
    <label># People Attending</label>
    <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>