force-app/main/default/objects/Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the event recurring?</description>
    <inlineHelpText>Whether recurring</inlineHelpText>
    <label>Recurring?</label>
    <type>Checkbox</type>
</CustomField>