force-app/main/default/objects/Event__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <description>Number of remaining seats on the event.</description>
    <formula>Max_seats__c -  People_Attending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining seats number</inlineHelpText>
    <label>Remaining Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>