force-app/main/default/objects/Event__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Date and time of start of the event.</description>
    <inlineHelpText>Date and time of start</inlineHelpText>
    <label>Start Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>